--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/scout": "^7.1",
         "laravel/tinker": "^1.0",
         "loilo/fuse": "^3.4",
+        "matchish/laravel-scout-elasticsearch": "dev-elasticsearch-7",
         "teamtnt/laravel-scout-tntsearch-driver": "^7.0"
     },
     "require-dev": {
