--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.1.3",
         "algolia/algoliasearch-client-php": "^2.2",
         "fideloper/proxy": "^4.0",
+        "itsgoingd/clockwork": "^3.1",
         "laravel/framework": "5.8.*",
         "laravel/scout": "^7.1",
         "laravel/tinker": "^1.0",
